Второй круг ревью: цепочка бинов, приватные обёртки, сеть безопасности (#54)
Консилиум смотрел первый коммит — правки по его находкам не смотрел никто. Второй
круг по дельте нашёл четыре своих дефекта, из них два — ложные стражи.

- Защита от задвоения смотрела ОДНО звено: на раскладке lazy → routing → пул
  наш прокси лежит двумя уровнями ниже, и внешний бин получал второй слой.
  Теперь обход цепочки вглубь с ограничителем.
- getMethod на непубличном классе бросает при вызове: приватная обёртка тенантов
  молча выключала защиту. Акцессор ищем на первом ПУБЛИЧНОМ предке, тип возврата
  сверяем до вызова (чужой одноимённый метод не зовём вовсе).
- catch (Throwable) вокруг построения прокси можно было снять при зелёной сборке:
  final-класс отсекается предпроверкой раньше. Завёл фикстуру на sealed-классе.
- Ветка JDK-прокси проверялась только маркером — по ней SQL мог пропасть молча.

Сверх находок: добавлен счётчик глубины HANDING_OUT. Он берёт то, чего не берёт
структурная проверка — чужой акцессор вроде getDelegate. Полным его считать нельзя,
и это замер, а не рассуждение: LazyConnectionDataSourceProxy спрашивает цель позже,
при первом запросе, когда счётчик уже снят. Оставшаяся щель названа в javadoc.

Тесты 511 → 515, мутаций 19, каждая красит названный тест. Снапшот отчёта прежний.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>