@@ -9,17 +9,18 @@ import org.springframework.aop.SpringProxy;
 import org.springframework.aop.framework.ProxyFactory;
 import org.springframework.aop.support.DefaultPointcutAdvisor;
 import org.springframework.aop.support.NameMatchMethodPointcut;
+import org.springframework.util.ClassUtils;
 
 import javax.sql.DataSource;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Proxy;
+import java.util.ArrayDeque;
 import java.util.Arrays;
-import java.util.Comparator;
+import java.util.Deque;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Stream;
 
 /**
  * Оборачивает бин {@link DataSource} так, что он остаётся объектом своего класса.
@@ -45,21 +46,37 @@ import java.util.stream.Stream;
  * <b>Подкласс создаётся без конструктора</b> (Objenesis внутри Spring AOP), то есть поля
  * подкласса пусты, и любой невперехваченный метод выполнится на пустом объекте. Отсюда
  * ступень «не проксируем класс с {@code final}-методом»: перехватить такой метод нельзя, и он
- * тихо вернёт {@code null} вместо значения. К бину, который сам JDK-прокси (встроенная база,
- * декоратор по интерфейсу), это не относится: подкласс там не нужен, хватает прокси по
- * интерфейсам. ⚠️ При {@code -Dspring.objenesis.ignore=true} Spring уходит в штатный фолбэк и
+ * тихо вернёт {@code null} вместо значения. К бину, который САМ является JDK-прокси (чужой
+ * декоратор по интерфейсу, Spring AOP в режиме {@code proxyTargetClass=false}), это не
+ * относится: подкласс там не нужен, хватает прокси по интерфейсам. ⚠️ Встроенная база сюда
+ * НЕ относится, хоть это и напрашивается: {@code EmbeddedDatabaseFactory$EmbeddedDataSourceProxy} —
+ * обычный класс, проверено. ⚠️ При {@code -Dspring.objenesis.ignore=true} Spring уходит в штатный фолбэк и
  * конструктор пула всё-таки вызывается — один раз, на создании прокси.
  * <p>
- * ⚠️ <b>Чужие перегрузки {@code getConnection} уходят в пул нетронутыми.</b> У Oracle UCP это
- * {@code getConnection(Properties)} и {@code getConnection(String, String, Properties)} — метки
- * соединения, по которым пул выбирает, что отдать. В datasource-proxy заводим ТОЛЬКО две
- * сигнатуры из {@link DataSource}, остальное идёт в настоящий пул без логирования SQL.
+ * ⚠️ <b>Чужие перегрузки {@code getConnection} уходят в пул нетронутыми.</b> У Oracle UCP
+ * ({@code oracle.ucp.jdbc.PoolDataSource}) это {@code getConnection(Properties)} и
+ * {@code getConnection(String, String, Properties)} — метки соединения, по которым пул
+ * выбирает, что отдать; сверено по документации Oracle, самого jar в проекте нет. Поэтому
+ * в datasource-proxy заводим ТОЛЬКО две сигнатуры из {@link DataSource}, остальное идёт
+ * в настоящий пул без логирования SQL.
  * Разбирать чужие перегрузки «как умеем» нельзя: приведение аргумента к {@code String} падает
  * прямо в коде потребителя, а выброшенный лишний аргумент меняет смысл вызова молча.
  * <p>
- * ⚠️ <b>Цепочку бинов оборачиваем один раз.</b> {@code LazyConnectionDataSourceProxy} или
- * {@code AbstractRoutingDataSource} поверх пула — это ДВА бина, и обёртка на каждом дала бы
- * каждый запрос в отчёте дважды. Бин, чья цель — уже наш прокси, пропускаем.
+ * ⚠️ <b>Цепочку бинов считаем один раз, и держат это ДВА механизма.</b>
+ * {@code LazyConnectionDataSourceProxy} поверх {@code AbstractRoutingDataSource} поверх пула —
+ * это три бина, и обёртка на каждом писала бы один запрос в отчёт трижды.
+ * <ol>
+ *   <li>{@link #wrapsOurProxy} не оборачивает бин, внутри которого наш прокси уже есть. Знает
+ *       акцессоры Spring и потому неполон: чужой декоратор вправе назвать свой
+ *       {@code getDelegate};</li>
+ *   <li>{@link #HANDING_OUT} гасит вложенную выдачу соединения по стеку. Полон по построению,
+ *       но работает только когда делегация СИНХРОННАЯ.</li>
+ * </ol>
+ * Порознь ни один не закрывает всё, и это замер, а не рассуждение:
+ * {@code LazyConnectionDataSourceProxy} спрашивает цель не в {@code getConnection}, а позже,
+ * при первом запросе — счётчик к тому времени уже снят, и без первого механизма запрос
+ * попадал в отчёт дважды. ⚠️ Остаётся щель: чужой декоратор с НЕизвестным акцессором И
+ * ленивой делегацией даст задвоение. Известных таких нет, но обещать полноту нечестно.
  * <p>
  * ⚠️ <b>Идентичность бина меняется</b> (issue #59): {@code ds != исходный}, {@code getClass()}
  * даёт класс прокси, рефлексия по полям видит пустой экземпляр, {@code equals}/{@code hashCode}
@@ -81,7 +98,7 @@ public final class AllureDataSourceProxies {
 
     /**
      * Маркер нашего прокси: отвечает на вопрос «этот бин уже обёрнут?» без разбора советов
-     * внутри {@code Advised}. По нему же узнаём свою обёртку внутри чужой цепочки бинов.
+     * внутри {@code Advised}.
      * <p>
      * Без маркера второй заход тоже вернул бы тот же объект, но окольным путём:
      * сгенерированный класс прокси объявляет свои методы {@code final}, и сработала бы
@@ -93,26 +110,53 @@ public final class AllureDataSourceProxies {
     }
 
     /**
-     * Методы-акцессоры чужих обёрток, по которым видно нашу обёртку внутри цепочки. Только
-     * чтение уже вычисленного: {@code getTargetDataSource} у наследников
-     * {@code DelegatingDataSource}, карта целей у {@code AbstractRoutingDataSource}. Ищем
-     * рефлексией, потому что spring-jdbc в compile-classpath библиотеки нет (тот же приём,
-     * что в {@code JpaLaziness}).
+     * Идёт ли уже выдача соединения выше по стеку. Гасит дубли от делегации: в цепочке бинов
+     * ({@code LazyConnectionDataSourceProxy} → {@code AbstractRoutingDataSource} → пул) обёрнут
+     * каждый, и без гарда один запрос попал бы в отчёт столько раз, сколько слоёв.
+     * <p>
+     * Это тот же приём, что у ассертов AssertJ и Spring (грабли §2 код-стандарта). Он берёт
+     * то, чего не берёт структурная проверка {@link #wrapsOurProxy}: чужой декоратор вправе
+     * назвать свой акцессор {@code getDelegate}, и перечислить все такие имена нельзя.
+     * <p>
+     * ⚠️ <b>Полным его считать нельзя</b>, хотя вопрос «этот запрос уже посчитан» и звучит
+     * исчерпывающе: счётчик живёт на время ОДНОГО вызова, а {@code LazyConnectionDataSourceProxy}
+     * спрашивает цель не в {@code getConnection}, а позже, при первом запросе. Замерено: без
+     * структурной проверки такая цепочка даёт два шага на запрос. Потому механизма два.
+     * <p>
+     * ⚠️ Снимать ТОЛЬКО в {@code finally}: незакрытый флаг выключил бы SQL этого потока
+     * до конца прогона. Соседние пулы друг друга не глушат — флаг живёт ровно на время одного
+     * вызова, и два разных пула в одном тесте дают два шага (замерено).
+     */
+    private static final ThreadLocal<Boolean> HANDING_OUT = new ThreadLocal<>();
+
+    /**
+     * Акцессоры чужих обёрток, по которым видно наш прокси внутри цепочки: {@code getTargetDataSource}
+     * у наследников {@code DelegatingDataSource}, цели у {@code AbstractRoutingDataSource}. Ищем
+     * рефлексией, потому что spring-jdbc нет в compile-classpath библиотеки (приём из {@code JpaLaziness}).
      */
     private static final List<String> DELEGATE_ACCESSORS =
             List.of("getTargetDataSource", "getResolvedDefaultDataSource", "getResolvedDataSources");
+
+    /**
+     * Сколько бинов цепочки осматриваем. Три звена — уже мультиарендная схема из документации
+     * Spring, плюс запас на несколько целей у роутера. Предел держит и циклы: чужой бин вправе
+     * вернуть из акцессора самого себя, а зациклиться на старте контекста потребителя нельзя.
+     */
+    private static final int CHAIN_LIMIT = 8;
 
     private AllureDataSourceProxies() {
     }
 
     /**
-     * Бин с логированием SQL, остающийся объектом своего класса. Никогда не бросает и никогда
-     * не возвращает объект чужого класса: в худшем случае отдаёт исходный бин нетронутым.
+     * Бин с логированием SQL, остающийся объектом своего класса. Никогда не бросает: в худшем
+     * случае отдаёт исходный бин нетронутым. Класс сохраняется у всякого бина, который вообще
+     * имеет свой класс; у бина-JDK-прокси возвращается снова JDK-прокси с теми же интерфейсами —
+     * своего класса у такого бина нет и по конкретному типу его никто не инжектит.
      * <p>
-     * Ступени: не {@link DataSource} → как есть; уже обёрнут нами, сам является нашей обёрткой
-     * или обёрткой над ней → как есть; класс не подклассуется ({@code final}-метод, в том числе
-     * у чужого CGLIB-прокси) → исходный бин и строка в лог; сбой построения → исходный бин
-     * и предупреждение. Обеднённый отчёт — приемлемая цена, упавший контекст потребителя — нет.
+     * Ступени: не {@link DataSource} → как есть; уже обёрнут нами → как есть; класс
+     * не подклассуется ({@code final}-метод, в том числе у чужого CGLIB-прокси) → исходный бин
+     * и строка в лог; сбой построения → исходный бин и предупреждение. Обеднённый отчёт —
+     * приемлемая цена, упавший контекст потребителя — нет.
      *
      * @param beanName имя бина: единственное, чем пулы различимы в логе и в предупреждении
      */
@@ -129,9 +173,11 @@ public final class AllureDataSourceProxies {
             boolean byInterfaces = Proxy.isProxyClass(ds.getClass());
             Optional<String> blocked = byInterfaces ? Optional.empty() : cannotSubclass(ds);
             if (blocked.isPresent()) {
+                // Пользовательский класс, а не сгенерированный: имя вида Пул$$SpringCGLIB$$0
+                // читателю ничего не говорит, а в чужом логе выглядит поломкой.
                 AllureInstrumentationLogger.note("DbDataSource", "пул " + beanName
-                        + " (" + ds.getClass().getName() + ") не проксируем: " + blocked.get()
-                        + " — вложенных шагов SQL этого пула в отчёте не будет");
+                        + " (" + ClassUtils.getUserClass(ds.getClass()).getName() + ") не проксируем: "
+                        + blocked.get() + " — вложенных шагов SQL этого пула в отчёте не будет");
                 return bean;
             }
             return proxy(ds, beanName, byInterfaces);
@@ -188,44 +234,88 @@ public final class AllureDataSourceProxies {
      */
     private static Object connection(DataSource logged, MethodInvocation call) throws Throwable {
         Class<?>[] parameters = call.getMethod().getParameterTypes();
-        if (parameters.length == 0) {
-            return logged.getConnection();
+        boolean ours = parameters.length == 0
+                || (parameters.length == 2 && parameters[0] == String.class && parameters[1] == String.class);
+        if (!ours || Boolean.TRUE.equals(HANDING_OUT.get())) {
+            return call.proceed();
         }
-        if (parameters.length == 2 && parameters[0] == String.class && parameters[1] == String.class) {
-            return logged.getConnection((String) call.getArguments()[0], (String) call.getArguments()[1]);
+        HANDING_OUT.set(Boolean.TRUE);
+        try {
+            return parameters.length == 0
+                    ? logged.getConnection()
+                    : logged.getConnection((String) call.getArguments()[0], (String) call.getArguments()[1]);
+        } finally {
+            HANDING_OUT.remove();
         }
-        return call.proceed();
     }
 
     /**
-     * Бин-обёртка, внутри которой уже лежит наш прокси. Второй слой писал бы каждый запрос
-     * в отчёт дважды: ручник увидел бы задвоенные шаги SQL.
+     * Лежит ли наш прокси где-то ВНУТРИ этого бина. Тогда обёртка не нужна: запрос уже считает
+     * внутренний слой, а второй писал бы его в отчёт дважды.
      * <p>
-     * Порядок создания бинов на нашей стороне: обёртка инициализируется ПОСЛЕ своей цели,
-     * поэтому к моменту проверки цель уже наша. Обратный порядок (цель приходит лениво)
-     * защиту обходит — тогда снаружи останется два слоя, и это видно по задвоению в отчёте.
+     * Обходим вглубь, а не на один шаг: в раскладке {@code LazyConnectionDataSourceProxy →
+     * AbstractRoutingDataSource → пул} наш прокси лежит двумя уровнями ниже. У роутера целей
+     * несколько, поэтому это обход дерева, а не спуск по ссылке.
      */
     private static boolean wrapsOurProxy(DataSource ds) {
-        for (String accessor : DELEGATE_ACCESSORS) {
-            Object target = read(ds, accessor);
-            if (target instanceof AllureProxiedDataSource) {
-                return true;
-            }
-            if (target instanceof Map<?, ?> targets
-                    && targets.values().stream().anyMatch(AllureProxiedDataSource.class::isInstance)) {
-                return true;
+        Deque<Object> queue = new ArrayDeque<>();
+        queue.add(ds);
+        for (int visited = 0; !queue.isEmpty() && visited < CHAIN_LIMIT; visited++) {
+            Object node = queue.poll();
+            for (String accessor : DELEGATE_ACCESSORS) {
+                for (Object target : targets(read(node, accessor))) {
+                    if (target instanceof AllureProxiedDataSource) {
+                        return true;
+                    }
+                    if (target instanceof DataSource) {
+                        queue.add(target);
+                    }
+                }
             }
         }
         return false;
     }
 
-    /** Прочитать значение акцессора или {@code null}, если его нет и если он бросил. */
-    private static Object read(Object target, String accessor) {
-        try {
-            return target.getClass().getMethod(accessor).invoke(target);
-        } catch (Throwable notThere) {
-            return null;
+    /** Значение акцессора как список целей: у роутера это карта, у прочих — один бин. */
+    private static List<Object> targets(Object value) {
+        if (value instanceof Map<?, ?> map) {
+            return List.copyOf(map.values());
         }
+        return value == null ? List.of() : List.of(value);
+    }
+
+    /**
+     * Значение акцессора или {@code null}, если его нет, он не про цели или бросил.
+     * <p>
+     * Метод ищем на первом ПУБЛИЧНОМ классе иерархии, а не на классе объекта: у приватной
+     * обёртки потребителя ({@code private static class TenantRouter extends
+     * AbstractRoutingDataSource}) вызов метода, объявленного в непубличном классе, бросает
+     * {@code IllegalAccessException}, и защита молча выключалась бы — замерено.
+     * Виртуальная диспетчеризация всё равно приводит к переопределению.
+     * {@code setAccessible} не годится: он потянул бы {@code --add-opens} у потребителя.
+     * <p>
+     * Тип возврата сверяем ДО вызова: у чужого класса метод с таким именем может значить что
+     * угодно, и звать его ради «вдруг подойдёт» мы не вправе.
+     */
+    private static Object read(Object target, String accessor) {
+        for (Class<?> type = target.getClass(); type != null; type = type.getSuperclass()) {
+            if (!Modifier.isPublic(type.getModifiers())) {
+                continue;
+            }
+            try {
+                Method method = type.getMethod(accessor);
+                Class<?> returns = method.getReturnType();
+                if (!DataSource.class.isAssignableFrom(returns) && !Map.class.isAssignableFrom(returns)) {
+                    return null;
+                }
+                return method.invoke(target);
+            } catch (NoSuchMethodException lookHigher) {
+                continue;
+            } catch (Throwable broken) {
+                return null;
+            }
+        }
+        return null;
     }
 
     /**
@@ -240,16 +330,16 @@ public final class AllureDataSourceProxies {
      * прогонах и разных JDK.
      */
     private static Optional<Method> finalMethod(Class<?> type) {
-        Optional<Method> found = Optional.empty();
+        Method found = null;
         for (Class<?> current = type; current != null && current != Object.class; current = current.getSuperclass()) {
-            Optional<Method> here = Arrays.stream(current.getDeclaredMethods())
-                    .filter(method -> Modifier.isFinal(method.getModifiers())
-                            && !Modifier.isStatic(method.getModifiers())
-                            && !Modifier.isPrivate(method.getModifiers()))
-                    .min(Comparator.comparing(Method::getName));
-            found = Stream.concat(found.stream(), here.stream())
-                    .min(Comparator.comparing(Method::getName));
+            for (Method method : current.getDeclaredMethods()) {
+                int modifiers = method.getModifiers();
+                if (Modifier.isFinal(modifiers) && !Modifier.isStatic(modifiers) && !Modifier.isPrivate(modifiers)
+                        && (found == null || method.getName().compareTo(found.getName()) < 0)) {
+                    found = method;
+                }
+            }
         }
-        return found;
+        return Optional.ofNullable(found);
     }
 }
